--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "6.0.0",
+    "@ant-design/pro-components": "2.8.10",
     "@reduxjs/toolkit": "2.8.2",
     "@tailwindcss/vite": "4.1.12",
     "antd": "5.27.1",
     "axios": "1.11.0",
+    "dayjs": "^1.11.14",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-redux": "9.2.0",
