[FEAT] Hoàn thiện tính năng hiển thị thông tin cơ bản của nhân viên lên bảng

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,6 +39,9 @@
       "redux/*": [
         "./src/redux/*"
       ],
+      "helpers/*": [
+        "./src/helpers/*"
+      ],
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
